[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Puzzle Pier/Water Guns Intro.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Puzzle Pier/Minigame_Item.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Star Deco.png" type="Texture" id=3]
[ext_resource path="res://Misc/Font/SaveStar.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Puzzle Pier/Water_Guns/Water Guns Belt SS.png" type="Texture" id=5]
[ext_resource path="res://Assets/Puzzle Pier/Water_Guns/WG_Cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Puzzle Pier/Water Guns Background.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/Puzzle Pier/Water_Guns/Piece.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Area_Specific/Minigame/Water_Guns.gd" type="Script" id=9]
[ext_resource path="res://UI/Battle/Defense Window.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 1600, 0, 400, 100 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 1600, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 400, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 400, 100 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=9]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=31]
size = 14
outline_size = 2
outline_color = Color( 0.42, 0.26348, 0.2016, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=35]

[sub_resource type="DynamicFontData" id=32]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0.42, 0.26348, 0.2016, 1 )
extra_spacing_space = -3
font_data = SubResource( 32 )

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 3
outline_color = Color( 0.843137, 0.129412, 0.211765, 1 )
extra_spacing_space = -3
font_data = SubResource( 32 )

[sub_resource type="DynamicFont" id=11]
size = 14
outline_size = 3
outline_color = Color( 0.137255, 0.372549, 0.745098, 1 )
extra_spacing_space = -3
font_data = SubResource( 32 )

[sub_resource type="DynamicFont" id=12]
size = 14
outline_size = 3
outline_color = Color( 0.14902, 0.556863, 0.34902, 1 )
extra_spacing_space = -3
font_data = SubResource( 32 )

[sub_resource type="Animation" id=19]
resource_name = "Countdown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Countdown:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Game/Countdown:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.301961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Game/Countdown:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Game/Countdown:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FinalScore:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Place:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FinalScore:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=34]
resource_name = "final_score"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FinalScore:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Place:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FinalScore:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Water_Guns" type="Node2D"]
script = ExtResource( 9 )

[node name="Game" type="Node2D" parent="."]

[node name="Screen2" type="Sprite" parent="Game"]
texture = ExtResource( 7 )

[node name="Belt1" type="AnimatedSprite" parent="Game"]
modulate = Color( 0.960784, 0.941176, 0.996078, 1 )
position = Vector2( 0, -63 )
scale = Vector2( 1.6, 1.6 )
frames = SubResource( 18 )
speed_scale = 1.1

[node name="Belt2" type="AnimatedSprite" parent="Game"]
modulate = Color( 0.960784, 0.941176, 0.996078, 1 )
position = Vector2( 0, 183 )
scale = Vector2( 1.6, 1.6 )
frames = SubResource( 30 )
speed_scale = 1.1

[node name="SpawnRight" type="Position2D" parent="Game"]
position = Vector2( 404, 76 )

[node name="Piece" parent="Game" instance=ExtResource( 8 )]
position = Vector2( -229, 77 )

[node name="Piece2" parent="Game" instance=ExtResource( 8 )]
position = Vector2( -72, 77 )

[node name="Piece3" parent="Game" instance=ExtResource( 8 )]
position = Vector2( 90, 75 )

[node name="Piece4" parent="Game" instance=ExtResource( 8 )]
position = Vector2( 247, 76 )

[node name="Piece5" parent="Game" instance=ExtResource( 8 )]
position = Vector2( -231, -169 )

[node name="Piece6" parent="Game" instance=ExtResource( 8 )]
position = Vector2( -74, -169 )

[node name="Piece7" parent="Game" instance=ExtResource( 8 )]
position = Vector2( 88, -171 )

[node name="Piece8" parent="Game" instance=ExtResource( 8 )]
position = Vector2( 245, -170 )

[node name="SpawnLeft" type="Position2D" parent="Game"]
position = Vector2( -388, -169 )

[node name="Countdown" type="Label" parent="Game"]
visible = false
margin_left = -150.0
margin_top = -19.0
margin_right = 155.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1

[node name="Score" type="Label" parent="Game"]
margin_left = 120.0
margin_top = 249.0
margin_right = 400.0
margin_bottom = 576.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 31 )
text = "Score: 100"
align = 1
autowrap = true

[node name="TimeWindow" type="Sprite" parent="Game"]
position = Vector2( 182, 255 )
scale = Vector2( 0.32, 0.33 )
texture = ExtResource( 10 )

[node name="Time" type="Label" parent="Game"]
margin_left = 42.0
margin_top = 248.0
margin_right = 322.0
margin_bottom = 575.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 31 )
text = "60
"
align = 1
autowrap = true

[node name="Timer" type="Timer" parent="Game"]
wait_time = 60.0
one_shot = true

[node name="MaxTop" type="Area2D" parent="Game"]
position = Vector2( 0, -2 )
collision_layer = 4096
collision_mask = 4096

[node name="Top" type="CollisionShape2D" parent="Game/MaxTop"]
position = Vector2( -4, -269 )
scale = Vector2( 33.7145, -1.67174 )
shape = SubResource( 35 )

[node name="MaxBottom" type="Area2D" parent="Game"]
position = Vector2( 0, 2 )
collision_layer = 4096
collision_mask = 4096

[node name="Bottom" type="CollisionShape2D" parent="Game/MaxBottom"]
position = Vector2( 1, 271 )
scale = Vector2( 35.7449, -1.81435 )
shape = SubResource( 35 )

[node name="MaxRight" type="Area2D" parent="Game"]
position = Vector2( -9, 0 )
collision_layer = 4096
collision_mask = 4096

[node name="Right" type="CollisionShape2D" parent="Game/MaxRight"]
position = Vector2( 316, 2 )
scale = Vector2( -1.53053, -30.8194 )
shape = SubResource( 35 )

[node name="MaxLeft" type="Area2D" parent="Game"]
position = Vector2( 7, 0 )
collision_layer = 4096
collision_mask = 4096

[node name="Left" type="CollisionShape2D" parent="Game/MaxLeft"]
position = Vector2( -316, -14 )
scale = Vector2( -1.53053, -30.8194 )
shape = SubResource( 35 )

[node name="Cursor" parent="." instance=ExtResource( 6 )]
position = Vector2( 1, -15 )

[node name="Intro" type="Node2D" parent="."]

[node name="Screen" type="Sprite" parent="Intro"]
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="Intro"]
margin_left = -154.0
margin_top = -227.0
margin_right = 151.0
margin_bottom = -192.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Water Guns"
align = 1

[node name="Instruction" type="Label" parent="Intro"]
margin_left = -132.0
margin_top = -66.0
margin_right = 148.0
margin_bottom = 261.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "Use (Arrow Keys) to move your water gun around the area

Press (Shift) or (Z) to shoot water at the puzzle pieces"
align = 1
autowrap = true

[node name="1st" type="Label" parent="Intro"]
margin_left = -278.0
margin_top = 68.0
margin_right = 2.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 10 )
text = "1st"
align = 1
autowrap = true

[node name="2nd" type="Label" parent="Intro"]
margin_left = -141.0
margin_top = 68.0
margin_right = 139.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 11 )
text = "2nd"
align = 1
autowrap = true

[node name="3rd" type="Label" parent="Intro"]
margin_left = -4.0
margin_top = 68.0
margin_right = 276.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 12 )
text = "3rd"
align = 1
autowrap = true

[node name="Points1" type="Label" parent="Intro"]
margin_left = -276.0
margin_top = 185.0
margin_right = 4.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "500pts"
align = 1
autowrap = true

[node name="Points2" type="Label" parent="Intro"]
margin_left = -138.0
margin_top = 185.0
margin_right = 142.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "250pts"
align = 1
autowrap = true

[node name="Points3" type="Label" parent="Intro"]
margin_left = -1.0
margin_top = 185.0
margin_right = 279.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "100pts"
align = 1
autowrap = true

[node name="Item1" parent="Intro" instance=ExtResource( 2 )]
position = Vector2( -140, 131 )

[node name="Item2" parent="Intro" instance=ExtResource( 2 )]
position = Vector2( -4.00003, 131 )

[node name="Item3" parent="Intro" instance=ExtResource( 2 )]
position = Vector2( 134, 131 )

[node name="Stars" type="Node2D" parent="Intro"]
position = Vector2( 0, -2 )

[node name="StarDeco" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -176, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco2" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -88, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco3" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 0, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco4" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 88, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco5" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 176, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "open"
playback_speed = 0.6
anims/Countdown = SubResource( 19 )
anims/RESET = SubResource( 3 )
anims/flash = SubResource( 5 )
anims/open = SubResource( 7 )

[node name="Place" type="Label" parent="."]
visible = false
margin_left = -148.0
margin_top = -91.0
margin_right = 157.0
margin_bottom = -56.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1st!"
align = 1

[node name="FinalScore" type="Label" parent="."]
visible = false
margin_left = -150.0
margin_top = -45.0
margin_right = 155.0
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "500pts"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -280.0
margin_right = 320.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )

[node name="TextPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.22
anims/RESET = SubResource( 33 )
anims/final_score = SubResource( 34 )

[connection signal="body_entered" from="Game/MaxTop" to="Cursor" method="_on_MaxTop_body_entered"]
[connection signal="body_exited" from="Game/MaxTop" to="Cursor" method="_on_MaxTop_body_exited"]
[connection signal="body_entered" from="Game/MaxBottom" to="Cursor" method="_on_MaxBottom_body_entered"]
[connection signal="body_exited" from="Game/MaxBottom" to="Cursor" method="_on_MaxBottom_body_exited"]
[connection signal="body_entered" from="Game/MaxRight" to="Cursor" method="_on_MaxRight_body_entered"]
[connection signal="body_exited" from="Game/MaxRight" to="Cursor" method="_on_MaxRight_body_exited"]
[connection signal="body_entered" from="Game/MaxLeft" to="Cursor" method="_on_MaxLeft_body_entered"]
[connection signal="body_exited" from="Game/MaxLeft" to="Cursor" method="_on_MaxLeft_body_exited"]
